--- a/index.html
+++ b/index.html
@@ -7,22 +7,28 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
-    <link rel="stylesheet" href="<link href= "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    <link rel="stylesheet" href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-        crossorigin="anonymous">">
+        crossorigin="anonymous">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
+            </style>
 </head>
 
 <body>
     <div class="container">
         <div class="main">
-            <h1>Todo List...</h1>
+            <div class="h-one">
+                <h1>Todo List...  <img class="img-logo" src="./img/245-2456104_png-transparent-icon-todo-list-png-download.png" alt=""> </h1>
+            </div>
             <input type="text" id="todo" onkeydown="addTodoByEnter(event)">
-            <button onclick="addTodo()">Add Todo</button>
-            <button onclick="deleteAll(event)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
-                <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5M8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5m3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0"/>
-              </svg></button>
-            <ul id="list">
+            <button onclick="addTodo()" type="button" class="btn btn-outline-success">ADD TODO</button>
+            <button onclick="deleteAll(event)" type="button" class="btn btn-outline-danger">DELETE ALL TODO
+               
 
+            </button>
+            <ul id="list">
+              
             </ul>
         </div>
     </div>
