--- a/index.html
+++ b/index.html
@@ -10,25 +10,26 @@
     <link rel="stylesheet" href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
         crossorigin="anonymous">
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
-            </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
+    </style>
 </head>
 
 <body>
     <div class="container">
         <div class="main">
             <div class="h-one">
-                <h1>Todo List...  <img class="img-logo" src="./img/245-2456104_png-transparent-icon-todo-list-png-download.png" alt=""> </h1>
+                <h1>Todo List... <img class="img-logo"
+                        src="./img/245-2456104_png-transparent-icon-todo-list-png-download.png" alt=""> </h1>
             </div>
-            <input type="text" id="todo" onkeydown="addTodoByEnter(event)">
+            <input type="text" id="todo" onkeydown="addTodoByEnter(event)" placeholder="Enter Your Todo Tasks Here...">
             <button onclick="addTodo()" type="button" class="btn btn-outline-success">ADD TODO</button>
             <button onclick="deleteAll(event)" type="button" class="btn btn-outline-danger">DELETE ALL TODO
-               
+
 
             </button>
             <ul id="list">
-              
+
             </ul>
         </div>
     </div>
